--- a/src/app/pages/tiktok/publications/publications.component.html
+++ b/src/app/pages/tiktok/publications/publications.component.html
@@ -36,7 +36,7 @@
                     class="mt-2"
                     mat-mini-fab
                     color="link"
-                    (click)="comenOpen()"
+                    (click)="comenOpen(post)"
                   >
                     <mat-icon
                       matBadge="4"
