--- a/src/app/pages/tiktok/publications/publications.component.html
+++ b/src/app/pages/tiktok/publications/publications.component.html
@@ -5,7 +5,7 @@
         <button mat-raised-button color="link" (click)="addPost()">
           Crear publicación
         </button>
-        <button mat-raised-button color="link" >
+        <button mat-raised-button color="link" routerLink="/home/toktik/myposts" >
           Mis publicaciones
         </button>
       </div>
