Se modifico alguna parte del codigo

--- a/src/app/pages/tiktok/comments/comments.component.html
+++ b/src/app/pages/tiktok/comments/comments.component.html
@@ -1,7 +1,7 @@
 <section>
   <!-- <div class=""> -->
   <p mat-dialog-title>
-    Comentarios
+    Comentarios {{comments.length}}
     <button mat-icon-button mat-dialog-close class="icon" color="link">
       <mat-icon> close </mat-icon>
     </button>
