agregando elemento para el inicio del video

--- a/src/app/pages/tiktok/publications/publications.component.html
+++ b/src/app/pages/tiktok/publications/publications.component.html
@@ -45,7 +45,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col d-flex justify-content-center align-items-center">
-              <video
+              <video autoplay
                 #videoElement
                 controls
                 class="video"
