--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -22,7 +22,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Nombre del usuario</mat-label>
-                  <input matInput formControlName="username" required />
+                  <input matInput formControlName="username" required maxlength="50"/>
                   <mat-error
                     *ngIf="authForm.get('username').hasError('required')"
                   >
@@ -35,7 +35,7 @@
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Email</mat-label>
-                  <input matInput formControlName="email" required />
+                  <input matInput formControlName="email" required maxlength="50"/>
                   <mat-error
                     *ngIf="
                       authForm.get('email').hasError('required') ||
