--- a/src/app/pages/facebook/edit-my-post/edit-my-post.component.html
+++ b/src/app/pages/facebook/edit-my-post/edit-my-post.component.html
@@ -8,7 +8,7 @@
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Descripción</mat-label>
-                        <textarea matInput placeholder="¿Que estas pensando?" formControlName="description"></textarea>
+                        <textarea matInput placeholder="¿Que estas pensando?" formControlName="description" maxlength="255"></textarea>
                     </mat-form-field>
                 </div>
             </div>
