--- a/src/app/pages/auth/change-password/change-password.component.html
+++ b/src/app/pages/auth/change-password/change-password.component.html
@@ -22,7 +22,7 @@
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Nueva contraseña</mat-label>
+                  <mat-label>Nueva contraseñe</mat-label>
                   <input
                     matInput
                     formControlName="password"
