--- a/src/app/pages/auth/recover-password/recover-password.component.html
+++ b/src/app/pages/auth/recover-password/recover-password.component.html
@@ -8,8 +8,7 @@
         <div class="form-section">
           <div class="auth-wrapper">
             <h1 class="welcome-msg text-center"> Recuperar contraseña </h1>
-            <p class="auth-signup-text text-muted text text-Justified">Agrega el email para enviarte un código para recuperar 
-                tu contraseña.</p>
+            <p class="auth-signup-text text-muted text text-Justified">Agrega el correo electrónico para enviarte un código y de esa manera recuperar tu contraseña</p>
             <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
                 <div class="row">
                   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
@@ -17,7 +16,7 @@
                       <mat-label>Email</mat-label>
                       <input matInput formControlName="email" required>
                       <mat-error *ngIf="authForm.get('email').hasError('required') || authForm.get('email').touched">
-                       Porfavor ingresa el correo electronico
+                       Por favor ingresa el correo electrónico
                       </mat-error>
                     </mat-form-field>
                   </div>
