--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -18,8 +18,7 @@
                     <mat-label>Correo</mat-label>
                     <input matInput formControlName="email" />
                     <mat-error *ngIf="authForm.get('email').hasError('required') || authForm.get('email').touched">
-                    Por favor, introduce una dirección de correo electrónico
-                    válida
+                      Por favor, introduce una dirección de correo electrónico válida
                   </mat-error>
                   </mat-form-field>
                 </div>
@@ -54,7 +53,6 @@
             </form>
           </div>
         </div>
-      </div>
-  
+      </div> 
     </div>
   </div>
