--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -11,7 +11,7 @@
         <div class="auth-wrapper">
           <h1 class="welcome-msg text-center">Inscripción</h1>
           <p class="auth-signup-text text-muted">
-            llenar todo el formulario para realisar tu inscripción
+            Llenar todo el formulario para realizar tu inscripción
           </p>
           <form
             class="validate-form"
@@ -64,7 +64,7 @@
                   <mat-error
                     *ngIf="authForm.get('password').hasError('required')"
                   >
-                    La contraseña es requeridad
+                    La contraseña es requerida
                   </mat-error>
                   <mat-error
                     *ngIf="authForm.get('password').hasError('invalidPassword')"
