--- a/src/app/pages/facebook/publications/comments/comments.component.html
+++ b/src/app/pages/facebook/publications/comments/comments.component.html
@@ -152,7 +152,7 @@
               matInput
               type="text-area"
               formControlName="descripcion"
-              placeholder="Escrive tu comentario"
+              placeholder="Escribe tu comentario"
               rows="3"
             ></textarea>
             <div class="container">
