--- a/src/app/pages/dialogs/dialog-signin/dialog-signin.component.html
+++ b/src/app/pages/dialogs/dialog-signin/dialog-signin.component.html
@@ -29,7 +29,7 @@
 
     <p class="menssageError">{{ textErrorCode }}</p>
     <h6 class="text-Justified mt-3">
-      Ingresa el codigo enviado a tu correo electronico para acceder a tus redes
+      Ingresa el código enviado a tu correo electrónico para acceder a tus redes
       sociales
     </h6>
   </body>
