--- a/src/app/pages/home/header/header.component.html
+++ b/src/app/pages/home/header/header.component.html
@@ -139,15 +139,15 @@
             </button>
             <button mat-menu-item  routerLink="/home/bookface/myposts">
               <mat-icon>record_voice_over</mat-icon>
-              <span>Mis Publicasiones Bookface</span>
+              <span>Mis Publicaciones Bookface</span>
             </button>
             <button mat-menu-item >
               <mat-icon>record_voice_over</mat-icon>
-              <span>Mis Publicasiones Toktik</span>
+              <span>Mis Publicaciones Toktik</span>
             </button>
             <button mat-menu-item disabled>
               <mat-icon>feedback</mat-icon>
-              <span>Terminos y Condiciones</span>
+              <span>Términos y Condiciones</span>
             </button>
             <button mat-menu-item (click)="logout()">
               <mat-icon>logout</mat-icon>
